# vareni

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SPEC.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 001_initial.sql  002_recipe_emoji.sql  003_food_preferences.sql  004_recipe_discovery.sql  005_recipe_sections.sql  006_cook_method.sql
backend/src/: auth.rs  browser.rs  config.rs  embedding.rs  error.rs  lib.rs  main.rs  metrics.rs  models.rs  push_notifier.rs  scraper.rs
backend/src/ai/: chat.rs  client.rs  discovery.rs  ingest.rs  mod.rs  plan.rs
backend/src/db/: meal_plan.rs  mod.rs  push.rs  recipes.rs  users.rs
backend/src/routes/: auth.rs  chat.rs  discover.rs  ingest.rs  log.rs  mod.rs  plan.rs  public.rs  push.rs  recipes.rs  settings.rs
backend/tests/: api_smoke_test.rs  auth_test.rs  discovery_test.rs  llm_ingest_test.rs  log_test.rs  meal_plan_test.rs  metrics_test.rs  public_test.rs  push_test.rs  recipes_test.rs  settings_test.rs  smoke_test.rs
backend/tests/common/: mod.rs
docs/superpowers/plans/: 2026-04-12-cooking-app.md  2026-04-13-instagram-ingestion.md  2026-04-14-recipe-discovery.md  2026-04-15-headless-browser.md
docs/superpowers/specs/: 2026-04-13-instagram-ingestion-design.md  2026-04-14-recipe-discovery-design.md  2026-04-15-headless-browser-design.md  2026-04-27-metrics-design.md  (+1 more)
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  main.ts  router.ts  style.css
tools/embedding-bench/: Cargo.toml
tools/embedding-bench/data/: recipes.json  scraped.json  synthetic.json
tools/embedding-bench/src/: debug.rs  main.rs
(+24 files in other folders)
