[package]
name = "embedding-bench"
version = "0.1.0"
edition = "2024"

[dependencies]
ort = { version = "2.0.0-rc.12", features = ["download-binaries", "ndarray"] }
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
ndarray = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7"
